# ide

./: .gitignore  CMakeLists.txt  Makefile  README.md  autogen.sh
cmake/: assert.cmake
sources/: CMakeLists.txt
sources/editor/: CMakeLists.txt
sources/editor/include/: generator.hpp  native-open.hpp  ordered-map.hpp
sources/editor/include/trollworks-editor/: app.hpp  controlflow.hpp  events.hpp  logger.hpp  project.hpp  userprefs.hpp
sources/editor/include/trollworks-editor/assets/: data.hpp  db.hpp  descriptor.hpp  loader.hpp  type.hpp  watch.hpp
sources/editor/include/trollworks-editor/assets/data/: raw.hpp  texture.hpp
sources/editor/include/trollworks-editor/data/: component.hpp  entity.hpp  scene.hpp  system.hpp
sources/editor/include/trollworks-editor/data/components/: sprite.hpp  transform.hpp
sources/editor/include/trollworks-editor/ui/: hooks.hpp
sources/editor/include/trollworks-editor/ui/components/: assets-view.hpp  console-view.hpp  dockspace.hpp  entities-view.hpp  inspector-view.hpp  main-window.hpp  menubar.hpp  scene-view.hpp  systems-view.hpp
sources/editor/include/trollworks-editor/ui/state/: dockspace.hpp  selection.hpp  view.hpp
sources/editor/include/trollworks-editor/ui/widgets/: tree-view.hpp
sources/editor/src/: app.cpp  events.cpp  logger.cpp  main.cpp  project.cpp  userprefs.cpp
sources/editor/src/assets/: db.cpp  descriptor.cpp  loader.cpp  type.cpp  watch.cpp
sources/editor/src/assets/data/: raw.cpp  texture.cpp
sources/editor/src/data/components/: sprite.cpp  transform.cpp
sources/editor/src/ui/components/: assets-view.cpp  console-view.cpp  dockspace.cpp  entities-view.cpp  inspector-view.cpp  main-window.cpp  menubar.cpp  scene-view.cpp  systems-view.cpp
sources/editor/src/ui/state/: selection.cpp
sources/runtime/: CMakeLists.txt
